--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "description": "Application de gestion multi-supermarchés : gestion des stocks, ventes, utilisateurs, fournisseurs et bien plus. Conçue pour centraliser et optimiser l'activité de plusieurs points de vente.",
   "author": {
-    "name": "Faturachman Dwi Putro",
-    "email": "faturachmanputro@gmail.com"
+    "name": "Christian",
+    "email": "christianaka65@gmail.com"
   },
   "main": "dist-electron/main.js",
   "scripts": {
