--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build Windows Release
 
 on:
   push:
@@ -6,12 +6,8 @@ on:
       - 'v*'
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    
-    strategy:
-      matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
+  build-windows:
+    runs-on: windows-latest
     
     steps:
     - name: Checkout code
@@ -33,34 +29,19 @@ jobs:
     - name: Build Vue app
       run: npm run build-only
     
-    - name: Build Electron app
-      run: npm run electron:build
+    - name: Build Electron app for Windows
+      run: npm run electron:build-win
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Upload Windows artifacts
-      if: matrix.os == 'windows-latest'
       uses: actions/upload-artifact@v4
       with:
         name: windows-build
         path: release/*.exe
-    
-    - name: Upload macOS artifacts
-      if: matrix.os == 'macos-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: macos-build
-        path: release/*.dmg
-    
-    - name: Upload Linux artifacts
-      if: matrix.os == 'ubuntu-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: linux-build
-        path: release/*.AppImage
 
   release:
-    needs: build
+    needs: build-windows
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     
@@ -68,17 +49,25 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Download all artifacts
+    - name: Download Windows artifacts
       uses: actions/download-artifact@v4
+      with:
+        name: windows-build
     
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        files: |
-          windows-build/*
-          macos-build/*
-          linux-build/*
+        files: windows-build/*
         draft: false
         prerelease: false
+        body: |
+          ## Nouvelle version Windows
+          
+          Cette version contient uniquement l'exécutable Windows (.exe).
+          
+          ### Installation
+          1. Téléchargez le fichier .exe
+          2. Exécutez l'installateur
+          3. Suivez les instructions d'installation
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
