--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Windows Release
+name: Build and Release
 
 on:
   push:
@@ -6,8 +6,12 @@ on:
       - 'v*'
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
+  build:
+    runs-on: ${{ matrix.os }}
+    
+    strategy:
+      matrix:
+        os: [windows-latest, macos-latest, ubuntu-latest]
     
     steps:
     - name: Checkout code
@@ -22,52 +26,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
-    - name: Type check (allow failures)
-      run: npm run type-check || echo "TypeScript errors ignored"
-      continue-on-error: true
-    
-    - name: Build Vue app
-      run: npm run build-only
-    
-    - name: Build Electron app for Windows
-      run: npm run electron:build-win
+    - name: Build and publish
+      run: npm run build
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Upload Windows artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: windows-build
-        path: release/*.exe
-
-  release:
-    needs: build-windows
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Download Windows artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: windows-build
-    
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: windows-build/*
-        draft: false
-        prerelease: false
-        body: |
-          ## Nouvelle version Windows
-          
-          Cette version contient uniquement l'exécutable Windows (.exe).
-          
-          ### Installation
-          1. Téléchargez le fichier .exe
-          2. Exécutez l'installateur
-          3. Suivez les instructions d'installation
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # Utiliser le Personal Access Token créé précédemment
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
