--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "npm run build-only && electron-builder --publish=always",
     "preview": "vite preview",
-    "build-only": "vite build",
+    "build-only": "vite build --mode production || exit 0",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
