--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "MultiMarket",
-  "version": "0.0.0",
+  "name": "multimarket",
+  "version": "3.0.0",
   "private": true,
   "type": "module",
   "description": "Application de gestion multi-supermarchés : gestion des stocks, ventes, utilisateurs, fournisseurs et bien plus. Conçue pour centraliser et optimiser l'activité de plusieurs points de vente.",
