Fix: Dashboard Plain

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron:dev": "vite --mode electron",
     "electron:build": "npm run build && electron-builder",
     "electron:build-win": "npm run build-only && electron-builder --win",
+    "electron:build-win-publish": "npm run build-only && electron-builder --win --publish=always",
     "electron:publish": "npm run build && electron-builder --publish=always",
     "electron:start": "electron .",
     "electron:debug": "electron . --inspect=9229",
