--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Configuration API
-VITE_API_BASE_URL=http://localhost:8000/api
+VITE_API_BASE_URL=https://multi.ciatci.com/api
 
 # Configuration de l'environnement
 VITE_APP_ENV=development
