--- a/.env
+++ b/.env
@@ -2,8 +2,4 @@
 VITE_API_BASE_URL=https://multi.ciatci.com/public/index.php/api
 
 # Configuration de l'environnement
-VITE_APP_ENV=development
-
-# Configuration de l'application
-VITE_APP_NAME=SuperMarket Admin
-VITE_APP_VERSION=1.0.0
+VITE_APP_ENV=production
