--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
 # Configuration API
-VITE_API_BASE_URL=http://localhost:8000/api
+VITE_API_BASE_URL=https://multi.ciatci.com/public/index.php/api
 
 # Configuration de l'environnement
-VITE_APP_ENV=development
+VITE_APP_ENV=production
 
-# Configuration de l'application
-VITE_APP_NAME=SuperMarket Admin
-VITE_APP_VERSION=1.0.0
