--- a/package.json
+++ b/package.json
@@ -11,28 +11,41 @@
   "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build-only && electron-builder --publish=always",
+    "build": "npm run clean && npm run build-only && electron-builder --win --x64 --publish=always",
     "preview": "vite preview",
     "build-only": "vite build --mode production || exit 0",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "electron:dev": "vite --mode electron",
-    "electron:build": "npm run build && electron-builder",
-    "electron:build-win": "npm run build-only && electron-builder --win",
-    "electron:build-win-publish": "npm run build-only && electron-builder --win --publish=always",
+    "electron:build": "npm run electron:build-optimized",
+    "electron:build-win": "npm run electron:build-win-optimized",
+    "electron:build-win-publish": "npm run clean && npm run build-only && electron-builder --win --x64 --publish=always",
     "electron:build-clean": "npm run clean && npm run electron:build-win-publish",
-    "electron:publish": "npm run build && electron-builder --publish=always",
+    "electron:publish": "npm run clean && npm run build-only && electron-builder --win --x64 --publish=always",
     "electron:start": "electron .",
     "electron:debug": "electron . --inspect=9229",
     "electron:dev-debug": "vite --mode electron && electron . --inspect=9229",
     "clean": "rm -rf release dist",
     "clean:win": "if exist release rmdir /s /q release && if exist dist rmdir /s /q dist",
-    "check-icons": "node fix-icons.js"
+    "check-icons": "node fix-icons.js",
+    "analyze": "npm run build-only && echo 'Bundle analysis saved to dist/stats.html'",
+    "electron:build-optimized": "npm run clean && npm run build-only && electron-builder --publish=never",
+    "electron:build-win-optimized": "npm run clean && npm run build-only && electron-builder --win --x64 --publish=never",
+    "performance:check": "npm run build-only && npm run analyze",
+    "release:local": "npm run clean && npm run type-check && npm run lint && npm run build-only && electron-builder --win --x64 --publish=never",
+    "release:github": "npm run clean && npm run type-check && npm run lint && npm run build-only && electron-builder --win --x64 --publish=always",
+    "release:draft": "npm run clean && npm run type-check && npm run lint && npm run build-only && electron-builder --win --x64 --publish=onTagOrDraft",
+    "release:patch": "npm version patch && npm run release:github",
+    "release:minor": "npm version minor && npm run release:github",
+    "release:major": "npm version major && npm run release:github",
+    "prerelease": "npm run type-check && npm run lint",
+    "postrelease": "echo '🎉 Release completed successfully! Check: https://github.com/Christianzer/MultiMarket/releases'"
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
     "@tanstack/vue-table": "^8.11.8",
+    "@tanstack/vue-virtual": "^3.13.12",
     "@unovis/vue": "^1.3.3",
     "@vee-validate/zod": "^4.12.5",
     "@vueuse/core": "^10.7.2",
@@ -50,6 +63,7 @@
     "vue": "^3.4.18",
     "vue-feather": "^2.0.0",
     "vue-router": "^4.2.5",
+    "vue-sonner": "^2.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -68,6 +82,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
