--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,22 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
-    - name: Build and publish
-      run: npm run build
+    - name: Build Windows
+      if: matrix.os == 'windows-latest'
+      run: npm run build:win
       env:
-        # Utiliser le Personal Access Token créé précédemment
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    
+    - name: Build Linux
+      if: matrix.os == 'ubuntu-latest'
+      run: npm run build:linux
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    
+    - name: Build macOS
+      if: matrix.os == 'macos-latest'
+      run: npm run build:mac
+      env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
     
     - name: Upload Windows artifacts with latest.yml
